# sourcecpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: var_utils_01.cpp  var_utils_01.hpp
src/common/: Person.cpp  Person.hpp
test/: std_optional_examples.cpp  std_variant_simples.cpp
thirdparties/catch2/: catch.hpp
